# peppermint

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  docker-compose.yml  dockerfile  mypy.ini  package-lock.json  package.json  playwright.config.ts  pyproject.toml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.js
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  spike.md  story.md  support.md  task.md
backend/alembic/: env.py
backend/alembic/versions/: 1e662cb59c63_create_transaction_filter_category_.py  23aa7d6c7d0b_create_accounts_table.py  2574570ab1d5_create_user_table.py  31c4b979f089_create_account_table.py  888e5c1db39c_create_token_blacklist_table.py  a0afadb34e87_create_budgets_table.py  ee0f8faeb254_create_token_blacklist_table.py
backend/src/: main.py  utils.py
backend/src/api/: deps.py
backend/src/core/: config.py  parser.py  security.py
backend/src/crud/: __init__.py  base.py  crud_account.py  crud_budget.py  crud_category.py  crud_filter.py  crud_token_blacklist.py  crud_transaction.py  crud_user.py
backend/src/db/: db.py  seed.py
backend/src/email-templates/: magic_link.html  magic_link.mjml  new_account.html  new_account.mjml  reset_password.mjml  test_email.html  test_email.mjml
backend/src/models/: account.py  budget.py  category.py  filter.py  json_msg.py  token.py  token_blacklist.py  transaction.py  user.py
frontend/src/: app.postcss  hooks.server.ts
frontend/tests/: test.ts
storage/imports/: transactions-to-parse.csv
storage/test-files/: test.csv
(+129 files in other folders)
