[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nadeem Maida <nadeem.maida@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.0"
python-multipart = "^0.0.5"
email-validator = "^1.2.1"
requests = "^2.28.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^1.9.1"
gunicorn = "^20.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-dotenv = "^0.20.0"
emails = "^0.6"
Jinja2 = "^3.1.2"
sqlmodel = "^0.0.8"
alembic = "^1.9.2"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
types-passlib = "^1.7.7.7"
black = "*"
isort = "*"
autoflake = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
typer = "^0.7.0"
rich = "^13.3.1"
types-python-jose = "^3.3.4.3"
pytest-asyncio = "^0.20.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry.scripts]
migrate = "bin.migrate:app"
test = "bin.test:app"
lint = "bin.lint:app"
server = "bin.server:app"
container = "bin.container:app"